--- a/inventario.html
+++ b/inventario.html
@@ -20,6 +20,7 @@
         <form id="form-agregar">
             <input type="text" id="nombre" placeholder="Nombre del medicamento" required>
             <input type="text" id="concentracion" placeholder="Concentración" required>
+              <input type="text" id="concentracion" placeholder="LOTE" required>
             <input type="text" id="laboratorio" placeholder="Laboratorio" required>
             <input type="text" id="invima" placeholder="Registro INVIMA" required>
             <input type="text" id="forma" placeholder="Forma farmacéutica" required>
