--- a/inventario.html
+++ b/inventario.html
@@ -37,6 +37,7 @@
                 <tr>
                     <th>Nombre</th>
                     <th>Concentración</th>
+                    <th>LOTE</th>
                     <th>Laboratorio</th>
                     <th>INVIMA</th>
                     <th>Forma Farmacéutica</th>
